--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saanvika - Biography</title>
+    <meta name="google-site-verification" content="go5mmOOSwQ25MBgLQa3FUqN4Co39fxb6yf6OpytrCzQ" />
     <style>
         body {
             font-family: Arial, sans-serif;
