--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 
 <div class="container">
     <img src="saanvika.jpg" alt="Saanvika Image" class="profile-img">
-    <h2>Early Life</h2>
-    <p>Saanvika was born and raised in a culturally rich family. From an early age, she exhibited an affinity for the arts, especially acting and storytelling.</p>
+    <h2>Early Life and Education</h2>
+    <p> Saanvika was born in Jabalpur, Madhya Pradesh on 8 January 1990. She holds a BTech degree in Electronics and Communication. She currently resides in Mumbai, Maharashtra. </p>
 
     <h2>Career</h2>
     <p>Saanvika began her career in the entertainment industry with small roles that showcased her versatility. Her breakout performance brought her national recognition and admiration.</p>
