--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
     <p> Saanvika was born in Jabalpur, Madhya Pradesh on 8 January 1990. She holds a BTech degree in Electronics and Communication. She currently resides in Mumbai, Maharashtra. </p>
 
     <h2>Career</h2>
-    <p>Saanvika began her career in the entertainment industry with small roles that showcased her versatility. Her breakout performance brought her national recognition and admiration.</p>
+    <p> Saanvika made her debut in the web series Panchayat as Rinki Dubey. She also played supporting roles in Lakhan Leela Bhargava and Hajamat in 2023. </p>
 
-    <h2>Achievements</h2>
-    <p>She has been awarded multiple accolades for her outstanding performances and continues to inspire young artists across the country.</p>
+    <h2>Awards</h2>
+    <p> She won the Popular Choice Actor at the Global Excellence Award in 2024 for her role in Panchayat. </p>
 
     <h2>Personality</h2>
     <p>Known for her grace, intelligence, and dedication, Saanvika is more than just an actress—she's a role model to many aspiring creatives.</p>
