--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saanvika Biography</title>
+    <h1>Saanvika (Pooja Singh)</h1>  
+        <p>Indian Actress | Panchayat Fame</p>  
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -62,8 +63,6 @@
     </style>
 </head>
 <body>
-
-<header>Saanvika Biography</header>
 
 <div class="container">
     <img src="saanvika.jpg" alt="Saanvika Image" class="profile-img">
