--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <header>
     <h1>Saanvika (Pooja Singh)</h1>  
-        <p>Indian Actress | Panchayat Fame</p>  
+        <p>Indian Actress | Panchayat Fame</p>
+    </header>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -75,8 +77,43 @@
     <h2>Awards</h2>
     <p> She won the Popular Choice Actor at the Global Excellence Award in 2024 for her role in Panchayat. </p>
 
-    <h2>Personality</h2>
-    <p>Known for her grace, intelligence, and dedication, Saanvika is more than just an actress—she's a role model to many aspiring creatives.</p>
+    <h2>TV Shows</h2>  
+        <table>  
+            <tr>  
+                <th>Show / Web Series</th>  
+                <th>Year(s)</th>  
+                <th>Role</th>  
+            </tr>  
+            <tr>  
+                <td>Panchayat</td>  
+                <td>Season 1 to 4</td>  
+                <td>Rinki Dubey – daughter of Pradhanji & Manju Devi</td>  
+            </tr>  
+            <tr>  
+                <td>Lakhan Leela Bhargava</td>  
+                <td>2023</td>  
+                <td>Supporting Role</td>  
+            </tr>  
+            <tr>  
+                <td>Hajamat</td>  
+                <td>2023</td>  
+                <td>Supporting Role</td>  
+            </tr>  
+        </table>
+    <h2>Personal Life</h2>  
+        <ul>  
+            <li><strong>Date of Birth:</strong> 8 January 1990</li>  
+            <li><strong>Age:</strong> 35 (as of 2025)</li>  
+            <li><strong>Zodiac Sign:</strong> Capricorn</li>  
+            <li><strong>Nationality:</strong> Indian</li>  
+            <li><strong>Religion:</strong> Hinduism</li>  
+            <li><strong>Hometown:</strong> Jabalpur, Madhya Pradesh</li>  
+            <li><strong>Current Address:</strong> Mumbai, Maharashtra</li>  
+            <li><strong>Relationship Status:</strong> Unmarried</li>  
+            <li><strong>Siblings:</strong> 4 elder sisters </li>  
+        </ul>
+    <h2>Net Worth</h2>  
+        <p>Estimated to be around ₹50 lakh (as of 2025).</p> 
 </div>
 
 <button onclick="topFunction()" id="topBtn" title="Go to top">↑</button>
