--- a/index.html
+++ b/index.html
@@ -44,6 +44,18 @@
         h2 {
             color: #ff6f61;
         }
+        table {  
+            width: 100%;  
+            border-collapse: collapse;  
+            margin-top: 10px;  
+        }  
+        table, th, td {  
+            border: 1px solid #ccc;  
+        }  
+        th, td {  
+            padding: 10px;  
+            text-align: left;  
+        }  
         #topBtn {
             display: none;
             position: fixed;
