--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
         </ul>
     <h2>Net Worth</h2>  
         <p>Estimated to be around ₹50 lakh (as of 2025).</p> 
+    <h2> Achievements </h2>
+        <p> Recently, Saanvika ranked 3rd in IMDb Popular Indian Celebrities for Panchayat Web Series (2020-2025). </p>
 </div>
 
 <button onclick="topFunction()" id="topBtn" title="Go to top">↑</button>
