--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <header>
-    <h1>Sanvika (Pooja Singh)</h1>  
+    <h1>Sanvikaa (Pooja Singh)</h1>  
         <p>Indian Actress | Panchayat Fame</p>
     </header>
     <style>
@@ -81,10 +81,10 @@
 <div class="container">
     <img src="saanvika.jpg" alt="Saanvika Image" class="profile-img">
     <h2>Early Life and Education</h2>
-    <p> Sanvika was born in Jabalpur, Madhya Pradesh on 8 January 1990. She holds a BTech degree in Electronics and Communication. She currently resides in Mumbai, Maharashtra. </p>
+    <p> Sanvikaa was born in Jabalpur, Madhya Pradesh on 8 January 1990. She holds a BTech degree in Electronics and Communication. She currently resides in Mumbai, Maharashtra. </p>
 
     <h2>Career</h2>
-    <p> Sanvika made her debut in the web series Panchayat as Rinki Dubey. She also played supporting roles in Lakhan Leela Bhargava and Hajamat in 2023. </p>
+    <p> Sanvikaa made her debut in the web series Panchayat as Rinki Dubey. She also played supporting roles in Lakhan Leela Bhargava and Hajamat in 2023. </p>
 
     <h2>Awards</h2>
     <p> She won the Popular Choice Actor at the Global Excellence Award in 2024 for her role in Panchayat. </p>
@@ -127,7 +127,7 @@
     <h2>Net Worth</h2>  
         <p>Estimated to be around ₹50 lakh (as of 2025).</p> 
     <h2> Achievements </h2>
-        <p> Recently, Sanvika ranked 3rd in IMDb Popular Indian Celebrities for Panchayat Web Series (2020-2025). </p>
+        <p> Recently, Sanvikaa ranked 3rd in IMDb Popular Indian Celebrities for Panchayat Web Series (2020-2025). </p>
 </div>
 
 <button onclick="topFunction()" id="topBtn" title="Go to top">↑</button>
